--- a/src/app/module/tour/component/tour-card/tour-card.component.scss
+++ b/src/app/module/tour/component/tour-card/tour-card.component.scss
@@ -49,6 +49,7 @@ swiper-container {
 .package-img {
   position: relative;
   height: 250px;
+  cursor: pointer;
 
   swiper-container {
     height: 100%;
