--- a/src/app/shared/enquiry-modal/enquiry-modal.component.html
+++ b/src/app/shared/enquiry-modal/enquiry-modal.component.html
@@ -3,14 +3,16 @@
     <div class="modal-content-wrapper">
       <div class="modal-header">
         <h5 class="modal-title">Have a question? Enter your details</h5>
-        <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss()"> <i class="ri-close-line"></i></button>
+        <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss()"> <i
+            class="ri-close-line"></i></button>
       </div>
 
       <div class="modal-body">
         <form (ngSubmit)="onSubmit()" class="form-container">
           <div class="form-group">
             <label for="name">Given Name</label>
-            <input type="text" id="name" name="name" [(ngModel)]="enquiryForm.name" class="form-control" required>
+            <input type="text" id="name" name="name" placeholder="Please enter your phone"
+              [(ngModel)]="enquiryForm.name" class="form-control" required>
           </div>
 
           <div class="form-group">
@@ -19,13 +21,15 @@
               <div class="country-code">
                 <span>+91</span>
               </div>
-              <input type="tel" id="phone" name="phone" [(ngModel)]="enquiryForm.phone" class="form-control" required>
+              <input type="tel" id="phone" name="phone" placeholder="Please enter your phone"
+                [(ngModel)]="enquiryForm.phone" class="form-control" required>
             </div>
           </div>
 
           <div class="form-group">
             <label for="email">Email Address</label>
-            <input type="email" id="email" name="email" placeholder="Please enter your email" [(ngModel)]="enquiryForm.email" class="form-control" required>
+            <input type="email" id="email" name="email" placeholder="Please enter your email"
+              [(ngModel)]="enquiryForm.email" class="form-control" required>
           </div>
 
           <button type="submit" class="submit-button">
